# Social-Nav-Metrics

./: CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  package.xml
config/: config_example.yaml
launch/: metrics_recorder.launch
scripts/: acceleration_monitor.py  metrics_recorder.py
src/: collision_counter.cpp
